--- a/frontend/src/app/about-us/about-us.component.scss
+++ b/frontend/src/app/about-us/about-us.component.scss
@@ -1,4 +1,4 @@
-.contributor {
+.git-contributor {
 	display: inline-block;
 	background-color: mix(#000, #fff, 5%);
 	position: relative;
@@ -21,5 +21,54 @@
 		left: 0;
 		right: 0;
 		bottom: 0;
+	}
+}
+
+hr {
+	margin: 32px 0;
+	border-color: rgba(0, 0, 0, 0.1);
+}
+
+.contributors {
+	// text engraved on golden plate?
+	// background-color: yellow;
+	// text-shadow: 0px 1px 0px rgba(255, 255, 255, 0.5); /* 50% white from bottom */
+}
+
+.employees {
+	h2 {
+		margin-bottom: 0;
+	}
+
+	h3 {
+		margin-top: 0;
+		font-weight: 400;
+		margin-bottom: 0;
+	}
+
+	// .material-icons {
+	// 	margin-top: 4px;
+	// 	margin-bottom: 8px;
+	// 	color: #000;
+	// }
+
+	p {
+		margin-top: 8px;
+		margin-bottom: 16px;
+	}
+
+	.image {
+		width: 100%;
+		height: 200px;
+		border-radius: 4px;
+		background-position: center;
+		background-repeat: no-repeat;
+		background-size: cover;
+	}
+
+	.mat-card {
+		white-space: nowrap;
+		overflow: hidden;
+		margin-bottom: 16px;
 	}
 }
