Updated home component

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -70,31 +70,28 @@
 	</div>
 	<div class="container-fluid" style="padding: 0 64px;">
 		<div class="row align-items center">
-			<div class="col">
-				<img
-					src="https://dummyimage.com/1920x1005&text=%20"
-					alt="Silence"
-				/>
-				<p>Silence 🌼🌿🍄 by Caitlyn</p>
+			<div class="col-md">
+				<img src="/assets/screenshots/silence.jpg" alt="Silence" />
+				<p>Silence by Caitlyn</p>
 			</div>
-			<div class="col">
+			<div class="col-md">
 				<img
 					src="https://dummyimage.com/1920x1005&text=%20"
 					alt="Silence"
 				/>
 			</div>
-			<div class="col">
+			<div class="col-md">
 				<img src="/assets/screenshots/solace.jpg" alt="Solace" />
 				<p>Solace by Monoglu</p>
 			</div>
-			<div class="col">
+			<div class="col-md">
 				<img
 					src="/assets/screenshots/tanks-corner-bar.jpg"
 					alt="Tank's Corner Bar"
 				/>
 				<p>Tank's Corner Bar</p>
 			</div>
-			<div class="col">
+			<div class="col-md">
 				<img
 					src="/assets/screenshots/lockdown-dance-party.jpg"
 					alt="Lockdown Dance Party"
