Updated download component text

--- a/frontend/src/app/header/download/download.component.html
+++ b/frontend/src/app/header/download/download.component.html
@@ -21,12 +21,11 @@
 	today!
 </h1>
 <p style="text-align: center;">
-	The alpha version of Tivoli is unfinished and doesn't represent the final
-	product
+	The early access version of Tivoli is unfinished and doesn't represent
 	<br />
-	Expect bugs and issues which you can
-	<a href="https://git.tivolicloud.com/tivolicloud/issues" target="_blank">
-		report here
+	the final product. Expect issues which can be
+	<a href="https://roadmap.tivolicloud.com" target="_blank">
+		reported here
 	</a>
 </p>
 <ng-container *ngIf="!correctPassword">
