Updated about us and home components

--- a/frontend/src/app/about-us/about-us.component.html
+++ b/frontend/src/app/about-us/about-us.component.html
@@ -124,7 +124,7 @@
 			</ng-container>
 			<ng-container *ngIf="contributors">
 				<h2>
-					Honorable contributors
+					Honorable contributors in random order
 					<span style="font-size: 12px;">
 						to
 						<a href="http://highfidelity.com" target="_blank">
