Added privacy policy

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -282,7 +282,10 @@
 		Tivoli is made with lots of love and care
 		<mat-icon style="color: #f44336; margin-left: 4px;">favorite</mat-icon>
 	</p>
-	<p style="opacity: 0.7;">
+	<p style="opacity: 0.7; margin-bottom: 4px;">
 		Copyright &copy; {{ year }} Tivoli Cloud VR, Inc. All rights reserved.
+	</p>
+	<p style="opacity: 0.3;">
+		<a routerLink="/privacy-policy" style="color: #fff;">Privacy Policy</a>
 	</p>
 </div>
