Updated homepage buttons to be bigger with get started

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -16,24 +16,19 @@
 		</span> -->
 		</h1>
 		<div class="buttons">
-			<button
-				style="padding: 4px 24px;"
-				mat-flat-button
-				color="primary"
-				routerLink="/download"
-			>
+			<button mat-flat-button color="primary" routerLink="/download">
 				<mat-icon>get_app</mat-icon>
 				Download
 			</button>
 			<span style="margin: 0 16px;"></span>
 			<a
-				style="padding: 4px 24px;"
 				mat-flat-button
 				href="https://docs.tivolicloud.com"
 				target="_blank"
 			>
-				<mat-icon>bookmarks</mat-icon>
-				Docs
+				<mat-icon>arrow_forward</mat-icon>
+				Get started
+				<!-- <img src="/assets/get-started-arrow.png" class="arrow" /> -->
 			</a>
 		</div>
 	</div>
