Added world links which won't work yet but the site is ready

--- a/frontend/src/app/ui/domain-card/domain-card.component.html
+++ b/frontend/src/app/ui/domain-card/domain-card.component.html
@@ -49,5 +49,8 @@
 		<button mat-button *ngIf="editMode" (click)="onGenerateToken()">
 			<mat-icon>vpn_key</mat-icon> Generate new access token
 		</button>
+		<a mat-button *ngIf="editMode" [href]="domain.url" target="_blank">
+			<mat-icon>link</mat-icon> World link
+		</a>
 	</mat-card-actions>
 </mat-card>
