--- a/frontend/src/app/user/settings/settings.component.html
+++ b/frontend/src/app/user/settings/settings.component.html
@@ -165,7 +165,7 @@
 						style="color: #f44336; font-size: 75%; margin-top: 0;"
 						*ngIf="passwordForm.hasError('mismatch')"
 					>
-						New password doesn't match confirm password
+						New password doesn't match confirmed password
 					</p>
 
 					<button
