--- a/frontend/src/app/header/sign-in/sign-in.component.scss
+++ b/frontend/src/app/header/sign-in/sign-in.component.scss
@@ -1,7 +1,9 @@
 .login {
 	display: flex;
 	flex-direction: row;
-	align-items: stretch;
+	align-items: center;
+	max-width: 600px;
+	min-height: 280px; // so sidebar will always fit
 
 	$mobileWidth: 564px + 140px;
 
@@ -13,7 +15,7 @@
 		width: 170px;
 		min-width: 170px;
 		margin-left: -24px;
-		margin-top: -24px;
+		margin-top: -24px - 1px;
 		margin-bottom: -24px;
 		margin-right: 24px;
 		background-color: #e91e63;
@@ -21,6 +23,7 @@
 		background-size: auto 100%;
 		background-position: 100%;
 		background-repeat: no-repeat;
+		align-self: stretch;
 
 		@media only screen and (max-width: $mobileWidth) {
 			// margin-left: -24px;
