Added extra info box to homepage

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -35,6 +35,18 @@
 </div>
 <div class="info">
 	<div class="container">
+		<div class="row align-items center">
+			<h1>
+				We are building a friendly, creative and inclusive metaverse for
+				everyone. Hang out with friends from all over the world, host or
+				attend events big or small, build and experience magical worlds.
+				The only limit is your imagination!
+			</h1>
+		</div>
+	</div>
+</div>
+<div class="info">
+	<div class="container">
 		<div class="row align-items-center" style="padding-bottom: 0;">
 			<div class="col">
 				<h1 class="icon-title" style="font-weight: 400;">
@@ -43,10 +55,8 @@
 				</h1>
 				<h2 style="font-weight: 400;">
 					Create your very own worlds where you can build together
-					with others and
-					<br />
-					express your imagination knowing that nobody can take it
-					away from you.
+					with others and express your imagination knowing that nobody
+					can take it away from you.
 					<br />
 					<br />
 					Hosted on your own hardware or soon available on-demand from
