--- a/frontend/src/styles.scss
+++ b/frontend/src/styles.scss
@@ -1,3 +1,14 @@
+@use "@material/theme" with (
+	$primary: #e91e63,
+	$secondary: #e91e63,
+	$background: #fff,
+);
+
+@use "@angular-mdc/theme/material";
+
+@use '@material/data-table/mdc-data-table';
+
+// to be replaced by above
 @import "~@angular/material/theming";
 @include mat-core();
 
@@ -7,8 +18,8 @@ $warn: mat-palette($mat-red);
 $theme: mat-light-theme($primary, $accent, $warn);
 @include angular-material-theme($theme);
 
-@import "../node_modules/bootstrap/dist/css/bootstrap-grid.css";
-@import "fonts";
+@import "./fonts.scss";
+@import "bootstrap/dist/css/bootstrap-grid.css";
 
 html,
 body {
