--- a/frontend/src/app/admin/admin.component.scss
+++ b/frontend/src/app/admin/admin.component.scss
@@ -4,7 +4,12 @@
 	max-width: 1600px; /* or 950px */
 }
 
-.avatar {
-	width: 32px;
-	height: 32px;
+.menu {
+	button {
+		margin: 0 4px;
+
+		&.active {
+			background-color: rgba(#000, 0.05);
+		}
+	}
 }
