Small updates to admin panel

--- a/frontend/src/app/admin/user/user.component.html
+++ b/frontend/src/app/admin/user/user.component.html
@@ -133,9 +133,9 @@
 							</td>
 						</tr>
 						<tr mdcDataTableRow>
-							<th mdcDataTableHeaderCell>Minutes</th>
+							<th mdcDataTableHeaderCell>Online minutes</th>
 							<td mdcDataTableCell>
-								{{ user.session.minutes }}
+								{{ user.session.minutes }} minutes
 							</td>
 						</tr>
 					</tbody>
