Updated metaverse to tivolicloud.com

--- a/server/templates/email-reset-password.hbs
+++ b/server/templates/email-reset-password.hbs
@@ -21,7 +21,7 @@
 		<div
 			style="
 				padding: 20px 80px;
-				background-image: url(https://alpha.tivolicloud.com/assets/header.jpg);
+				background-image: url(https://tivolicloud.com/assets/header.jpg);
 				background-position: center 60%;
 				background-size: cover;
 				background-repeat: no-repeat;
@@ -29,7 +29,7 @@
 		>
 			<img
 				style="width: 100%;"
-				src="https://alpha.tivolicloud.com/assets/logo-light.png"
+				src="https://tivolicloud.com/assets/logo-light.png"
 			/>
 		</div>
 		<h2
