Updated home title

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -7,7 +7,7 @@
 	<div class="content">
 		<img src="/assets/logo-light.svg" alt="Tivoli Cloud VR logo" />
 		<h1 class="title">
-			Massive online social platform
+			Massive social online platform
 			<span style="font-size: 0.9em; display: block; font-weight: 400;">
 				for virtual reality and desktop
 			</span>
