Added Photogrammetry Park picture to home page

--- a/frontend/src/app/home/home.component.html
+++ b/frontend/src/app/home/home.component.html
@@ -81,9 +81,10 @@
 			</div>
 			<div class="col-md">
 				<img
-					src="https://dummyimage.com/1920x1005&text=%20"
-					alt="Silence"
+					src="/assets/screenshots/photogrammetry-park.jpg"
+					alt="Photogrammetry Park"
 				/>
+				<p>Photogrammetry Park by Caitlyn</p>
 			</div>
 			<div class="col-md">
 				<img src="/assets/screenshots/solace.jpg" alt="Solace" />
